# icsmbadminton

./: .deepsource.toml  .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20240909150522_setup.sql  20240914112931_timestamp_change.sql  20241113201646_setup.sql  20241123191254_team_members.sql  20241123222430_login_notnull.sql  20241123224556_cid_type.sql  20241127143245_bookings.sql  20241231114309_jti.sql
backend/src/: database.rs  error.rs  lib.rs  main.rs
backend/src/http/: admin.rs  mod.rs  pg_interval.rs  sessions.rs  token.rs  users.rs
client/: index.html  script.js  styles.css
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: about.css  collage.css  contentblock.css  dash-headerfooter.css  dash-page.css  dash.css  fieldinput.css  fieldnumlist.css  form-headerfooter.css  form.css  header.css  headerfooter.css  index.css  main.css  membership.css  memcard.css  (+3 more)
frontend/components/: .FieldCID.vue.swp  Collage.vue  ContentBlock.vue  FieldCID.vue  FieldCheckbox.vue  FieldInput.vue  FieldNumList.vue  FieldShort.vue  FormFooter.vue  FormHeader.vue  FormInfo.vue  FormTitle.vue  LightDarkSwitch.vue  MEMBlock.vue  MemCard.vue  NumItem.vue  SummaryBlock.vue
frontend/composables/: useScrollPercent.ts
frontend/content/: about.yaml  landing-photos.yaml  membership.yaml
frontend/layouts/: dash.vue  default.vue  form.vue  forms.vue
frontend/oldfiles/: index.html  script.js
frontend/pages/: about.vue  dash.vue  form.vue  gallery.vue  home.vue  index.vue  membership.vue  settings.vue  signup.vue  test.vue
