[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = {version="0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"]}
chrono = "0.4.34"
axum = "0.7.4"
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
dotenvy = "0.15.7"
uuid = "1.10.0"
anyhow = "1.0.88"
thiserror = "1.0.63"
validator = "0.18.1"
regex = "1.10.6"
once_cell = "1.20.0"
argon2 = "0.5.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
