[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = {version="0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"]}
chrono = { version = "0.4.34", features = ["serde"] }
axum = { version="0.7.4", features = ["macros"] }
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.18.1", features= ["derive"] }
regex = "1.11.1"
once_cell = "1.20.2"
argon2 = "0.5.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
serde_as = "0.0.1"
rand = "0.8.5"
derive_more = { version = "1.0.0", features = ["from"] }
tracing = "0.1.40"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.6.2", features = ["auth"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
reqwest = { version = "0.12.9", features = ["json"] }
